# app/controllers/api/v1/refunds_controller.rb
@@ -17,6 +17,13 @@ class Api::V1::RefundsController < ApplicationController
     render json: { error: e.message }, status: :unprocessable_content
   end
 
+  def index
+    transaction = Payments::FindService.call(current_merchant, params[:payment_uid]).transaction
+    result = Refunds::ListService.call(transaction)
+
+    render json: { refunds: result.refunds }, status: result.status
+  end
+
   def create
     params.require([ :amount ])
 
